--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <option value="Paneer">Paneer</option>
         <option value="Butter">Butter</option>
         <option value="Cheese">Cheese</option>
-        <option value="Ghee">Ghee</option>
+        <option value="ghee">Ghee</option>
       </select>
 
       <label for="expiryDate">Enter expiry date:</label>
