--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
       <label for="productSelect">Choose a product:</label>
       <select id="productSelect">
-        <option value="Bread">Bread</option>
-        <option value="Paneer">Paneer</option>
-        <option value="Butter">Butter</option>
-        <option value="Cheese">Cheese</option>
+        <option value="bread">Bread</option>
+        <option value="paneer">Paneer</option>
+        <option value="butter">Butter</option>
+        <option value="cheese">Cheese</option>
         <option value="ghee">Ghee</option>
       </select>
 
